--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,7 +14,7 @@ services:
 
   products-db:
     image: mongo:latest
-    container_name: user-mongo
+    container_name: products-mongo
     ports:
       - "27017:27017"
     volumes:
