--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,8 @@
-version: '3.8'
-
 services:
   order-service:
     build:
       context: .
-      dockerfile: ./docker/Dockerfile
+      dockerfile: ./order/docker/Dockerfile
     ports:
       - "${PORT}:3000" # Utilise la variable d'environnement PORT définie dans .env
     env_file:
