--- a/products/package.json
+++ b/products/package.json
@@ -16,7 +16,8 @@
     "mongoose": "^8.7.3",
     "supertest": "^7.0.0",
     "swagger-jsdoc": "^6.2.8",
-    "swagger-ui-express": "^5.0.1"
+    "swagger-ui-express": "^5.0.1",
+    "ts-node": "^10.9.2"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
@@ -30,6 +31,5 @@
     "@types/swagger-ui-express": "^4.1.6",
     "jest": "^29.7.0",
     "ts-jest": "^29.2.5",
-    "ts-node": "^10.9.2"
   }
 }
