--- a/cart/package.json
+++ b/cart/package.json
@@ -4,16 +4,17 @@
     "description": "Microservice for handling shopping cart functionality",
     "main": "src/app.js",
     "scripts": {
-      "start": "node src/app.js",
-      "dev": "nodemon src/app.js"
+        "start": "node src/app.js",
+        "dev": "nodemon src/app.js"
     },
     "dependencies": {
-      "express": "^4.17.1",
-      "mongoose": "^5.13.8",
-      "dotenv": "^10.0.0"
+        "dotenv": "^10.0.0",
+        "express": "^4.17.1",
+        "mongoose": "^5.13.8",
+        "swagger-jsdoc": "^6.2.8",
+        "swagger-ui-express": "^5.0.1"
     },
     "devDependencies": {
-      "nodemon": "^2.0.12"
+        "nodemon": "^2.0.12"
     }
-  }
-  
+}
