--- a/order/package.json
+++ b/order/package.json
@@ -9,7 +9,8 @@
         "dev": "nodemon src/index.js",
         "lint": "eslint .",
         "swagger": "node src/swagger.js",
-        "build": "docker build -t order-service ."
+        "build": "docker build -t order-service .",
+        "test": "npx jest"
     },
     "dependencies": {
         "dotenv": "^16.0.3",
@@ -21,7 +22,9 @@
     },
     "devDependencies": {
         "eslint": "^8.50.0",
-        "nodemon": "^3.0.1"
+        "jest": "^29.7.0",
+        "nodemon": "^3.0.1",
+        "supertest": "^7.0.0"
     },
     "engines": {
         "node": ">=14.0.0"
