--- a/users/package.json
+++ b/users/package.json
@@ -17,7 +17,8 @@
     "supertest": "^7.0.0",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.1",
-    "ts-node": "^10.9.2"
+    "ts-node": "^10.9.2",
+    "user-service": "file:"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
