--- a/api-gateway/docker/node/Dockerfile
+++ b/api-gateway/docker/node/Dockerfile
@@ -1,20 +1,12 @@
-# Utiliser une image Node.js officielle
 FROM node:lts-slim
 
-# Définir le répertoire de travail
-WORKDIR /usr/src/app
+WORKDIR /home/node/app
 
-# Copier package.json et package-lock.json (s'il existe)
-COPY package*.json ./
-
-# Installer les dépendances
+COPY ./package*.json ./
 RUN npm install
 
-# Copier le reste des fichiers de l'application
 COPY . .
 
-# Exposer le port sur lequel l'application écoute
 EXPOSE 3005
 
-# Démarrer l'application
-CMD ["node", "app.js"]
+CMD ["npm", "start"]
