--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,30 +1,18 @@
 services:
 
-  user-service:
+  apigateway-service:
     build:
-      context: ./users
+      context: ./api-gateway
       dockerfile: Docker/node/Dockerfile
     ports:
-      - "3001:3000"
+      - "3005:30005"
     volumes:
-      - ./user-service:/home/node/app
+      - ./api-gateway:/home/node/app
+      - /home/node/app/node_modules
     networks:
       - app-network
-    depends_on:
-      - user-db
+    
 
-  user-db:
-    image: mongo:latest 
-    container_name: user-mongo
-    ports:
-      - "27017:27017"
-    volumes:
-      - user-db-data:/data/db
-    networks:
-      - app-network
-
-volumes:
-  user-db-data:
 
 networks:
   app-network:
