--- a/api-gateway/package.json
+++ b/api-gateway/package.json
@@ -12,6 +12,9 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^1.7.7",
-    "express": "^4.21.1"
+    "cors": "^2.8.5",
+    "express": "^4.21.1",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.1"
   }
 }
