--- a/front/Front-MicroServices/package.json
+++ b/front/Front-MicroServices/package.json
@@ -4,16 +4,22 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "preview": "vite preview"
+    "entry": "./src/main.js",
+    "dev": "vue-cli-service serve",
+    "build": "vue-cli-service build src/main.js",
+    "lint": "eslint .",
+    "start": "npm run dev",
+    "preview": "vue-cli-service build && serve dist"
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "front-microservices": "file:",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.7.3",
-    "vue": "^3.5.12"
+    "react-router-dom": "^6.28.0",
+    "router": "^1.3.8",
+    "vue": "^3.5.12",
+    "vue-router": "^4.4.5"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.1.4",
