--- a/front/package.json
+++ b/front/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "vue-cli-service serve",
-    "build": "vue-cli-service build",
+    "build": "vue-cli-service build src/main.js",
     "lint": "eslint .",
     "start": "npm run dev",
     "preview": "vue-cli-service build && serve dist"
@@ -15,10 +15,21 @@
     "vue": "^3.2.47"
   },
   "devDependencies": {
+    "@babel/core": "^7.26.0",
+    "@babel/preset-env": "^7.26.0",
     "@eslint/js": "^9.11.1",
     "@vue/cli-service": "^5.0.0",
+    "@vue/compiler-sfc": "^3.5.12",
+    "babel-loader": "^9.2.1",
+    "css-loader": "^7.1.2",
     "eslint": "^9.11.1",
+    "style-loader": "^4.0.0",
     "typescript": "^5.5.3",
-    "typescript-eslint": "^8.7.0"
+    "typescript-eslint": "^8.7.0",
+    "vue-loader": "^17.4.2",
+    "vue-template-compiler": "^2.7.16",
+    "webpack": "^5.96.1",
+    "webpack-cli": "^5.1.4",
+    "webpack-dev-server": "^5.1.0"
   }
 }
