--- a/front/package.json
+++ b/front/package.json
@@ -4,6 +4,7 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
+    "entry": "./src/main.js",
     "dev": "vue-cli-service serve",
     "build": "vue-cli-service build src/main.js",
     "lint": "eslint .",
@@ -11,25 +12,21 @@
     "preview": "vue-cli-service build && serve dist"
   },
   "dependencies": {
+    "@vue/cli-service": "^5.0.8",
+    "bcryptjs": "^2.4.3",
     "front": "file:",
-    "vue": "^3.2.47"
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.7.3",
+    "router": "^1.3.8",
+    "vue": "^3.5.12",
+    "vue-router": "^4.4.5"
   },
   "devDependencies": {
-    "@babel/core": "^7.26.0",
-    "@babel/preset-env": "^7.26.0",
-    "@eslint/js": "^9.11.1",
-    "@vue/cli-service": "^5.0.0",
-    "@vue/compiler-sfc": "^3.5.12",
-    "babel-loader": "^9.2.1",
-    "css-loader": "^7.1.2",
-    "eslint": "^9.11.1",
-    "style-loader": "^4.0.0",
-    "typescript": "^5.5.3",
-    "typescript-eslint": "^8.7.0",
-    "vue-loader": "^17.4.2",
-    "vue-template-compiler": "^2.7.16",
-    "webpack": "^5.96.1",
-    "webpack-cli": "^5.1.4",
-    "webpack-dev-server": "^5.1.0"
-  }
+    "@vitejs/plugin-vue": "^5.1.4",
+    "vite": "^5.4.10"
+  },
+  "description": "This template should help get you started developing with Vue 3 in Vite. The template uses Vue 3 `<script setup>` SFCs, check out the [script setup docs](https://v3.vuejs.org/api/sfc-script-setup.html#sfc-script-setup) to learn more.",
+  "main": "vite.config.js",
+  "author": "",
+  "license": "ISC"
 }
