--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -105,12 +105,35 @@ services:
       - /home/node/app/node_modules
     networks:
       - app-network
+    
+  notif-service:
+    build:
+      context: ./notif
+      dockerfile: Docker/Dockerfile
+    ports:
+      - "3004:3004"
+    volumes:
+      - ./notif:/home/node/app
+      - /home/node/app/node_modules
+    networks:
+      - app-network
+
+  notif-db:
+    image: mongo:latest
+    ports:
+      - "27021:27017"
+    volumes:
+      - notif-db-data:/data/db
+    networks:
+      - app-network
+      
 
 volumes:
   user-db-data:
   cart-db-data:
   products-db-data:
   order-db-data:
+  notif-db-data:
 
 networks:
   app-network:
