--- a/notif/package.json
+++ b/notif/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "Microservice for handling notificantions functionalities",
   "main": "src/app.js",
+  "type": "module",
   "scripts": {
     "start": "node src/app.js",
     "dev": "nodemon src/app.js"
@@ -11,11 +12,10 @@
     "body-parser": "^1.20.3",
     "express": "^4.21.1",
     "nodemailer": "^6.9.16",
-    "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^4.6.2"
   },
   "devDependencies": {
-      "swagger-jsdoc": "^6.2.8",
-      "swagger-ui-express": "^4.6.2"
-  }  
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^4.6.2"
+  }
 }
