--- a/notif/package.json
+++ b/notif/package.json
@@ -11,11 +11,9 @@
   "dependencies": {
     "body-parser": "^1.20.3",
     "express": "^4.21.1",
+    "mongoose": "^8.8.0",
     "nodemailer": "^6.9.16",
-    "swagger-ui-express": "^4.6.2"
-  },
-  "devDependencies": {
-    "swagger-jsdoc": "^6.2.8",
-    "swagger-ui-express": "^4.6.2"
+    "swagger-ui-express": "^4.6.2",
+    "swagger-jsdoc": "^6.2.8"
   }
 }
