--- a/notif/package.json
+++ b/notif/package.json
@@ -14,6 +14,7 @@
     "express": "^4.21.1",
     "mongoose": "^8.8.0",
     "nodemailer": "^6.9.16",
+    "notif_service": "file:",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^4.6.2"
   }
