--- a/order/package.json
+++ b/order/package.json
@@ -16,6 +16,7 @@
         "dotenv": "^16.0.3",
         "express": "^4.18.2",
         "mongoose": "^7.3.1",
+        "order-service": "file:",
         "swagger-jsdoc": "^6.2.8",
         "swagger-ui-express": "^4.6.2",
         "uuidv4": "^6.2.13"
