--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -132,6 +132,14 @@ services:
     networks:
       - app-network
       
+  front_service:
+    build:
+      context: ./front
+      dockerfile: Docker/node/Dockerfile
+    ports:
+      - "5173:5173"
+    networks:
+      - app-network
 
 volumes:
   user-db-data:
